--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,22 @@
     "paths": {
       "@src/*": [
         "src/*"
-      ]
+      ],
+      "@Assets/*": [
+        "./src/Assets/*"
+      ],
+      "@Components/*": [
+        "src/Components/*"
+      ],
+      "@Screens/*": [
+        "src/Screens/*"
+      ],
+      "@Service/*": [
+        "./src/Service/*"
+      ],
+      "@Config/*": [
+        "./src/Config*"
+      ],
     }
   }
 }
