--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.65.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1"
   },
@@ -26,13 +27,17 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react": "^17.0.33",
+    "@types/react-native": "^0.66.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.4"
   },
   "jest": {
     "preset": "react-native"
